fix: add nowrap to button

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn {
-    @apply inline-flex justify-center items-center rounded-md cursor-pointer font-medium;
+    @apply inline-flex justify-center items-center rounded-md cursor-pointer font-medium whitespace-nowrap;
   }
   .btn:disabled {
     @apply cursor-not-allowed opacity-70;
